Fixed the ul list item alignment

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -7,4 +7,4 @@
 	flex-direction: column;
 }
 
-p { text-align: center; }
+ .description { text-align: center; }
